Update color of disabled buttons

--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -3,9 +3,9 @@ $themes: (
 	"light": (
 		"background": #e2e2e2,
 		"background-hover": #d1d1d1,
+		"background-button-disabled": #d2d2d2,
 		"background-input": #f9f9f9,
 		"background-input-hover": #d4d4d4,
-		"button-disabled": #d2d2d2,
 		"error": #d23939,
 		"main": #4e8bd2,
 		"main-hover": #447ab8,
@@ -20,9 +20,9 @@ $themes: (
 	"dark": (
 		"background": #1d1d1f,
 		"background-hover": #272629,
+		"background-button-disabled": #080808,
 		"background-input": #2f2f31,
 		"background-input-hover": #323234,
-		"button-disabled": #1d1d1d,
 		"error": #d23939,
 		"main": #4c81bf,
 		"main-hover": #4371a7,
