Decrease overlay spacing

--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -50,7 +50,8 @@ $paragraph-spacing: 1em;
 $spacing-abs-small: 10px;
 $spacing-abs-medium: 15px;
 $spacing-abs-large: 30px;
-$spacing-rel-small: 3.5vw;
+$spacing-rel-small: 2.5vw;
+$spacing-rel-medium: 3.5vw;
 $spacing-rel-large: 6vw;
 
 // Sizes
