--- a/src/renderer/assets/styles/components/_overlay.scss
+++ b/src/renderer/assets/styles/components/_overlay.scss
@@ -8,30 +8,31 @@
 	justify-content: center;
 	width: 100%;
 	height: 100%;
+	padding: $spacing-abs-large;
 	background-color: rgba(0, 0, 0, 0.6);
+}
 
-	.overlay-inner {
-		@include background-color("background");
-		position: relative;
-		max-width: 90%;
-		max-height: 100%;
-		overflow-y: auto;
-		border-radius: $border-radius-input;
-		box-shadow: $box-shadow;
-	}
+.overlay-inner {
+	@include background-color("background");
+	position: relative;
+	max-width: 100%;
+	max-height: 100%;
+	overflow-y: auto;
+	border-radius: $border-radius-input;
+	box-shadow: $box-shadow;
+}
 
-	.overlay-close-button {
-		position: absolute;
-		right: 0;
-	}
+.overlay-close-button {
+	position: absolute;
+	right: 0;
+}
 
-	.overlay-content {
-		padding: $spacing-rel-small;
+.overlay-content {
+	padding: $spacing-rel-small;
 
-		h1,
-		p:not(.file-dir):not(.banner-message) {
-			margin-bottom: $spacing-abs-medium;
-		}
+	h1,
+	p:not(.file-dir):not(.banner-message) {
+		margin-bottom: $spacing-abs-medium;
 	}
 }
 
