--- a/src/renderer/assets/styles/components/_overlay.scss
+++ b/src/renderer/assets/styles/components/_overlay.scss
@@ -14,12 +14,12 @@
 
 .overlay-inner {
 	@include background-color("background");
+	@include box-shadow($shadow-size-outer, "shadow-outer");
 	position: relative;
 	max-width: 100%;
 	max-height: 100%;
 	overflow-y: auto;
 	border-radius: $border-radius-input;
-	box-shadow: $box-shadow;
 }
 
 .overlay-close-button {
