--- a/src/renderer/assets/styles/base/_variables.scss
+++ b/src/renderer/assets/styles/base/_variables.scss
@@ -2,10 +2,11 @@
 $themes: (
 	"light": (
 		"background": #e2e2e2,
-		"background-hover": #d1d1d1,
+		"background-hover": #c5c5c5 /* Same as "background-toolbar" */,
 		"background-button-disabled": #d2d2d2,
 		"background-input": #f9f9f9,
 		"background-input-hover": #d4d4d4,
+		"background-toolbar": #c5c5c5 /* Same as "background-hover" */,
 		"error": #d23939,
 		"main": #4e8bd2,
 		"main-hover": #447ab8,
@@ -20,11 +21,12 @@ $themes: (
 		"shadow-outer": rgba(0, 0, 0, 0.18),
 	),
 	"dark": (
-		"background": #1d1d1f,
-		"background-hover": #272629,
+		"background": #1f1e21,
+		"background-hover": #3f3f41,
 		"background-button-disabled": #080808,
-		"background-input": #2f2f31,
+		"background-input": #353538,
 		"background-input-hover": #323234,
+		"background-toolbar": #131313,
 		"error": #d23939,
 		"main": #4c81bf,
 		"main-hover": #4371a7,
